# phyTreeViz

./: .gitignore  404.html  CITATION.cff  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: publich_mkdocs.yml
api-docs/treeviz/: index.html
cli-docs/phytreeviz/: index.html
docs/: getting_started.ipynb  index.md  plot_api_example.ipynb
docs/api-docs/: treeviz.md
docs/cli-docs/: phytreeviz.md
getting_started/: index.html
plot_api_example/: index.html
search/: search_index.json
src/phytreeviz/: __init__.py  treeviz.py
src/phytreeviz/scripts/: cli.py
src/phytreeviz/utils/: __init__.py
tests/: test_treeviz.py
tests/scripts/: test_cli.py
