[tool.poetry]
name = "phytreeviz"
version = "0.1.0"
description = "Simple phylogenetic tree visualization python package"
authors = ["moshi4"]
license = "MIT"
repository = "https://github.com/moshi4/PhyTreePlot/"
readme = "README.md"
keywords = [
    "bioinformatics",
    "phylogenetics",
    "visualization",
    "matplotlib",
    "phylogenetic-tree",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Framework :: Matplotlib",
]
include = ["tests"]
packages = [{ include = "phytreeviz", from = "src" }]

[tool.poetry.scripts]
phytreeviz = "phytreeviz.scripts:cli.main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=src --tb=line --cov-report=xml --cov-report=term"
testpaths = ["tests"]

# Lint Rules: https://beta.ruff.rs/docs/rules
[tool.ruff]
select = ["E", "F", "W", "I", "D", "B"]
ignore = [
    "D100",
    "D101",
    "D104",
    "D105",
    "D205",
    "D400",
    "D401",
    "D403",
    "D415",
    "B905",
]
src = ["src", "tests"]
line-length = 88

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = ">=3.5.3"
biopython = ">=1.7.9"
numpy = ">=1.21.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.1"
black = ">=23.1.0"
ruff = ">=0.0.264"
pytest-cov = ">=4.0.0"
ipykernel = ">=6.21.2"
mkdocs = ">=1.2"
mkdocstrings = { extras = ["python"], version = ">=0.19.0" }
mkdocs-jupyter = ">=0.21.0"
mkdocs-material = ">=8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
